--- a/wx/pages/index/index.wxml
+++ b/wx/pages/index/index.wxml
@@ -8,6 +8,6 @@
     </block>
   </view>
   <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+    <button class="user-motto" bindtap="clickMe">{{motto}}</button>
   </view>
 </view>
