--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,6 +9,7 @@
   </view>
   <view class="usermotto">
     <button class="user-motto" bindtap="clickMe">{{motto}}</button>
+     <button class="user-motto" bindtap="goPageOne">一击男</button>
   </view>
-  <tabbar active="0"></tabbar>
+  <tabbar active="5"></tabbar>
 </view>
