--- a/pages/one/one.wxml
+++ b/pages/one/one.wxml
@@ -24,3 +24,20 @@
         hover-stop-propagation='true'
   ></view>
 </view>
+
+<text class="picker">picker</text>
+
+<view>
+    <view>{{year}}年{{month}}月{{day}}日</view>
+    <picker-view indicator-style="height: 50px;" style="width: 100%; height: 300px;" value="{{value}}" bindchange="bindChange">
+        <picker-view-column>
+            <view wx:for="{{years}}" wx:key="*this" style="line-height: 50px">{{item}}年</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{months}}" wx:key="*this" style="line-height: 50px">{{item}}月</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{days}}" wx:key="*this" style="line-height: 50px">{{item}}日</view>
+        </picker-view-column>
+    </picker-view>
+</view>
